--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
             <button class="w-100 btn btn-outline-info my-3" id="signUp" onclick="addData() ">Sign Up</button>
             <p class="text-white">
                 You have an account?
-                <a href="login.html" class="text-white sign-up sign">Sign In</a>
+                <a href="index.html" class="text-white sign-up sign">Sign In</a>
             </p>
         </div>
     </div>
